--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   clerk_flutter: ^0.0.9-beta
   google_sign_in: ^6.2.1
+  video_player: ^2.7.0
+  font_awesome_flutter: ^10.7.0
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -53,11 +58,17 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  uses-material-design: true
+
+  assets:
+    - assets/text2video.png
+
+
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
-  uses-material-design: true
+ 
 
   # To add assets to your application, add an assets section, like this:
   # assets:
