--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   google_sign_in: ^6.2.1
   video_player: ^2.7.0
   font_awesome_flutter: ^10.7.0
+  google_fonts: ^6.2.1
 
 
 
@@ -61,7 +62,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/text2video.png
+    - assets/image.png
 
 
 
