--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   video_player: ^2.7.0
   font_awesome_flutter: ^10.7.0
   google_fonts: ^6.2.1
+  shared_preferences: ^2.1.1
+  uuid: ^3.0.7
 
 
 
@@ -46,13 +48,19 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^2.0.1
+
+  flutter_native_splash: ^2.3.5
+
+flutter_native_splash:
+  color: "#ffffff" # Background color
+  android: true
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
