--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   pay: ^3.2.1
   in_app_purchase: ^3.0.7
   device_info_plus: ^10.0.0
+  dio: ^5.3.3
 
 dev_dependencies:
   flutter_test:
