--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
 
   url_launcher: ^6.1.7
   clerk_flutter: ^0.0.9-beta
@@ -45,3 +46,7 @@ flutter:
 
   assets:
     - assets/image.png
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/text2video.png" # replace with your logo path
