--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   # Video
   video_player: ^2.7.0
   chewie: ^1.7.1
+  flutter_downloader: ^1.12.0
 
   # Authentication
   clerk_flutter: ^0.0.9-beta
@@ -26,12 +27,11 @@ dependencies:
   # Storage & Files
   shared_preferences: ^2.1.1
   path_provider: ^2.0.15
-  permission_handler: ^12.0.0+1
-  open_filex: ^4.0.2
 
+  open_filex: ^4.0.2
   # Payments
   pay: ^3.2.1
-  in_app_purchase: ^3.0.7
+  in_app_purchase: ^3.2.3
   provider: ^6.0.5
 
   # Utilities
@@ -43,6 +43,7 @@ dependencies:
 
   # Launcher Icons
   flutter_launcher_icons: ^0.13.1
+  permission_handler: 11.4.0
 
 dev_dependencies:
   flutter_test:
